# robot-llm

./: .env.template  .gitignore  Makefile  README.md  logger_config.py  main.py  pyproject.toml  requirements.txt
app/: configs.py  logger_config.py  main.py
app/controller/: robot.py
app/routers/: __init__.py  auth.py  commands.py  index.py
app/services/: mqtt.py  s3.py
controller/: robot.py
static/: aquarium.html  index.html  script.js  style.css
tests/: robot_controller_test.py
